// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`arrays failing 1`] = `
"expect(received).toSatisfy(expected)

Mismatches:
  \\"·· bar = 2  [90msatisfies: spok.le(1)[39m\\"
  \\"·· baz = 3  [90msatisfies: spok.string[39m\\"

Received:
  [{\\"foo\\": 1}, {\\"bar\\": 2}, {\\"baz\\": 3}]"
`;

exports[`nested objects failing 1`] = `
"expect(received).toSatisfy(expected)

Mismatches:
  \\"·· one = 1  [90msatisfies: spok.lez[39m\\"
  \\"·· ·· elf = 11  [90msatisfies: spok.function[39m\\"

Received:
  {\\"uno\\": {\\"eins\\": 1, \\"one\\": 1, \\"unoDeep\\": {\\"eleven\\": 11, \\"elf\\": 11}}}"
`;

exports[`no specs prints helping message 1`] = `
"expect(received).toSatisfy(expected)

No Specifications provided, adapt your code as follows and edit the specs as needed:

  expect(actual)
    .toSatisfy( [ { foo: 1 }, { bar: 2 }, { baz: 3 } ])
"
`;

exports[`simple objects failing 1`] = `
"expect(received).toSatisfy(expected)

Mismatches:
  \\"foo = 1  [90msatisfies: spok.ge(2)[39m\\"
  \\"bar = {}  [90msatisfies: spok.string[39m\\"

Received:
  {\\"bar\\": {}, \\"baz\\": 3, \\"foo\\": 1}"
`;
